# toolatlas-mcp

./: .dockerignore  .gitignore  Dockerfile  FIXES-PLAN.md  LICENSE  MANIFEST.in  PLAN.md  README.md  commit_msg.txt  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
docs/: changelog.md  deploy-under-subpath.md  development.md  plugin-architecture-v2.md  plugin-loading.md  proxy-engine.md  registry.md
examples/: README.md
examples/client/: python_client.py
examples/plugins/: governance_abac.py  rate_limiter.py  validation_plugin.py
examples/proxy/: enrichment_demo.py  setup_governance.py
src/toolatlas_mcp/: __init__.py  __main__.py  config.py  db.py
src/toolatlas_mcp/api/: app.py  schemas.py
src/toolatlas_mcp/api/routes/: analytics.py  dashboard.py  glossary.py  graph.py  proxies.py  search.py  servers.py  settings.py  tools.py
src/toolatlas_mcp/cli/: main.py
src/toolatlas_mcp/docs/: DOCUMENTATION-PLAN.md  README.md  api.md  architecture.md  cli.md  configuration.md  plugin-examples.md  plugin-hooks.md  plugin-system.md  plugin-testing.md  tool-graph.md  troubleshooting.md  ui-enhancement-plan.md
src/toolatlas_mcp/examples/client/: curl_examples.sh  python_client.py
src/toolatlas_mcp/examples/plugins/: basic_audit_logger.py  cache_custom.py  error_handling.py  notification_slack.py  rate_limiter.py
src/toolatlas_mcp/examples/proxy/: collision_scenario.py
src/toolatlas_mcp/plugin/: __init__.py  base.py  manager.py
src/toolatlas_mcp/plugin/builtins/: __init__.py  cache.py  metrics.py
src/toolatlas_mcp/proxy/: engine.py  middleware.py  server.py
src/toolatlas_mcp/registry/: json_storage.py  mcp_client.py  models.py  repository.py  storage.py
src/toolatlas_mcp/services/: __init__.py  connection_manager.py  health_checker.py  registry_sync.py  ws_manager.py
src/toolatlas_mcp/tracker/: service.py
tests/: conftest.py  test_analytics.py  test_cache.py  test_connection_manager.py  test_description_override.py  test_e2e.py  test_e2e_meta.py  test_e2e_plugins.py  test_glossary.py  test_graph.py  test_meta_protocol.py  test_plugin.py  test_proxy_call_tool.py  test_proxy_engine.py  test_proxy_list_tools.py  test_registry.py  test_registry_sync.py
tests/fixtures/: glossary_terms.json  proxy_configs.json  servers_config.json
tests/fixtures/mcp_servers/: aws_mcp.py  base_mcp.py  confluence_mcp.py  github_mcp.py  jira_mcp.py  pagerduty_mcp.py  slack_mcp.py
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx  Loading.tsx
ui/src/pages/: Analytics.tsx  Dashboard.tsx  Glossary.tsx  Graph.tsx  Proxies.tsx  ProxyDetail.tsx  Servers.tsx  ToolDetail.tsx  Tools.tsx
