[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolatlas-mcp"
version = "3.0.3"
description = "ToolAtlas — Discover, Govern, and Optimize MCP Tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "ToolAtlas contributors"}
]
keywords = [
    "mcp", "model-context-protocol", "tools", "governance",
    "proxy", "registry", "ai", "llm", "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.9",
    "rich>=13.0",
    "sse-starlette>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.3",
    "mypy>=1.8",
]
postgres = [
    "asyncpg>=0.30",
]
redis = [
    "redis>=5.0",
]
all = [
    "toolatlas-mcp[postgres,redis]",
]

[project.urls]
Homepage = "https://github.com/anomalyco/toolatlas-mcp"
Repository = "https://github.com/anomalyco/toolatlas-mcp"
Issues = "https://github.com/anomalyco/toolatlas-mcp/issues"

[project.scripts]
toolatlas = "toolatlas_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["toolatlas_mcp*"]

[tool.setuptools.package-data]
toolatlas_mcp = ["ui/dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
