[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolatlas-mcp"
version = "4.1.1"
description = "ToolAtlas — Discover, Govern, and Optimize MCP Tools"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Shashi Kundan", email = "shashikundan0001@gmail.com"}
]
keywords = [
    "mcp", "model-context-protocol", "tools", "governance",
    "proxy", "registry", "ai", "llm", "agent",
    "fastapi", "async", "sqlalchemy", "analytics",
    "discovery", "optimization", "sse", "server-sent-events",
    "plugin", "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.9",
    "rich>=13.0",
    "sse-starlette>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.3",
    "mypy>=1.8",
]
postgres = [
    "asyncpg>=0.30",
]
redis = [
    "redis>=5.0",
]
all = [
    "toolatlas-mcp[postgres,redis]",
]

[project.urls]
Homepage = "https://github.com/shashi3070/toolatlas-mcp"
Repository = "https://github.com/shashi3070/toolatlas-mcp"
Documentation = "https://github.com/shashi3070/toolatlas-mcp#readme"
Issues = "https://github.com/shashi3070/toolatlas-mcp/issues"
Changelog = "https://github.com/shashi3070/toolatlas-mcp/blob/main/docs/changelog.md"

[project.scripts]
toolatlas = "toolatlas_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["toolatlas_mcp*"]

[tool.setuptools.package-data]
toolatlas_mcp = ["ui/dist/**/*", "docs/**/*", "examples/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
